--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,12 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Aliasing */
+    "paths": {
+      "@/*": ["./src/components/*"]
+    }
   },
   "include": ["src"]
 }
