--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@solana/web3.js": "^1.98.2",
+    "@tailwindcss/vite": "^4.1.7",
+    "framer-motion": "^12.12.2",
+    "lucide-react": "^0.511.0",
     "pumpdotfun-sdk": "git://github.com/meltedblocks/pumpdotfun-sdk.git#15017c45099530005ba400a797257fce3d813f71",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.7",
     "vite-plugin-node-polyfills": "^0.23.0"
   },
   "devDependencies": {
@@ -26,8 +30,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
